remove docker dependnecy